--- a/src/styles.css
+++ b/src/styles.css
@@ -14,7 +14,8 @@
   }
   
   .user-form {
-    background: #f2f2f2;
+    background: #8a8543;
+    color: white;
     border-radius: 10px;
     padding: 10px 20px 20px;
     margin-top: 30px;
